test/Fail/Issue249.err
Issue249.agda:11.1-33: error: [DuplicateImports]
Ambiguous imports from module A for C
when scope checking the declaration
  open A renaming (X to C; Y to C)
